# rules_vcpkg

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
.github/workflows/: build_examples.yaml
buildifier/: BUILD.bazel
examples/: .gitignore  BUILD.bazel  MODULE.bazel
examples/hello_asio/: BUILD.bazel  MODULE.bazel
examples/hello_aws/: BUILD.bazel  MODULE.bazel
examples/hello_azure/: MODULE.bazel
examples/hello_fmt/: .gitignore  BUILD.bazel  MODULE.bazel  hello_fmt.cpp
examples/hello_folly/: BUILD.bazel  MODULE.bazel  hello_folly.cpp
examples/hello_gcp/: BUILD.bazel  MODULE.bazel
examples/hello_openssl/: BUILD.bazel  MODULE.bazel
examples/hello_qt/: BUILD.bazel  MODULE.bazel  MacOSX.sdk.build  README.md  copy_qt_plugins.bzl  hello_qt.cpp  x_vcpkg_get_python_packages.patch
examples/hellos/: MODULE.bazel
examples/hellos/hello_asio/: BUILD.bazel
examples/hellos/hello_aws/: hello_aws.cpp
examples/hellos/hello_azure/: BUILD.bazel  hello_azure.cpp
examples/hellos/hello_duckdb/: BUILD.bazel
examples/hellos/hello_fmt/: BUILD.bazel
examples/hellos/hello_folly/: BUILD.bazel  folly_src.patch
examples/hellos/hello_gcp/: BUILD.bazel  hello_gcp.cpp
examples/hellos/hello_openssl/: BUILD.bazel  hello_openssl.cpp
examples/with_llvm_toolchains/: MODULE.bazel  hello_asio  hello_aws  hello_azure  hello_duckdb  hello_fmt  hello_folly  hello_gcp  hello_openssl
vcpkg/: BUILD.bazel  extensions.bzl  vcpkg.bzl
vcpkg/bootstrap/: bootstrap.bzl  bootstrap_toolchains.bzl  collect_depend_info.bzl  declare.bzl  vcpkg_exec.bzl
vcpkg/bootstrap/macos/: BUILD.bazel  BUILD.macos.sdk.tpl  macos.bzl  macos_sdk_toolchain.bzl
vcpkg/bootstrap/private/: default_defs.bzl
vcpkg/bootstrap/utils/: cmake_parse_downloader.bzl  cmake_parser.bzl  collect_depend_info.bzl  download_deps.bzl  vcpkg_exec.bzl
vcpkg/private/: vcpkg_build.bzl  vcpkg_collect_outputs.bzl  vcpkg_lib.bzl  vcpkg_package.bzl
vcpkg/tests/: BUILD.bazel  cmake_parser_tests.bzl  hash_utils_tests.bzl
vcpkg/toolchain/: BUILD.bazel  current_toolchain.bzl  toolchain.bzl
vcpkg/toolchain/private/: BUILD.bazel  default_defs.bzl  vcpkg_cc_info.bzl
vcpkg/toolchain/triplets/: BUILD.bazel  linux.tmpl.cmake  macos.tmpl.cmake  toolchain.tmpl.cmake
vcpkg/vcpkg_utils/: BUILD.bazel  call_vcpkg_wrapper.sh  call_vcpkg_wrapper.sh.tpl  collect_outputs_by_prefixes.cpp  copy_sources.cpp  copy_sources.hpp  empty.cpp  extract_package_outputs.cpp  format_utils.bzl  hash_utils.bzl  logging.bzl  package_ctrl.cpp  package_ctrl.hpp  platform_utils.bzl  prepare_install_dir.cc  prepare_install_dir.cpp  validate_package_output.cpp
