module(
    name = "rules_vcpkg",
    version = "0.0.0",
    bazel_compatibility = [">=7.0.0"],
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
bazel_dep(name = "rules_cc", version = "0.1.1")

bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)

vcpkg = use_extension("//vcpkg:extensions.bzl", "vcpkg")
vcpkg.bootstrap(
    release = "2025.04.09",
    sha256 = "9a129eb4206157a03013dd87805406ef751a892170eddcaaf94a9b5db8a89b0f",
)
vcpkg.install(package = "vcpkg-cmake")
vcpkg.install(package = "fmt")

# vcpkg.install(package = "folly")
# vcpkg.install(package = "proxygen")
use_repo(vcpkg, "vcpkg")
use_repo(vcpkg, "cmake")
use_repo(vcpkg, "vcpkg_fmt")
use_repo(vcpkg, "vcpkg_vcpkg-cmake")

register_toolchains("@vcpkg//:vcpkg_toolchain")
