module(
    name = "rules_vcpkg",
    version = "0.0.0",
    bazel_compatibility = [">=8.1.0"],
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
bazel_dep(name = "rules_cc", version = "0.1.4")

vcpkg_external = use_extension("@rules_vcpkg//vcpkg:extensions.bzl", "vcpkg_external")
use_repo(vcpkg_external, "vcpkg_external")

register_toolchains("//vcpkg/toolchain:current_toolchain")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.3",
    dev_dependency = True,
)
