module(name = "vcpkg_examples")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_vcpkg", version = "0.0.0")
local_path_override(
    module_name = "rules_vcpkg",
    path = "..",
)

vcpkg = use_extension("@rules_vcpkg//vcpkg:extensions.bzl", "vcpkg")
vcpkg.bootstrap(
    commit = "9e8416f15d93fa9347e3291bd8c128dd44200ba5",
    sha256 = "54aa9cc47ce67cc35664eb9ad455f9201d749d008d89c95072621b78f96d48ed",
)

macos = use_extension("@rules_vcpkg//vcpkg:extensions.bzl", "macos")
macos.sdk(version = "15.5")
use_repo(macos, "macos_sdk")

register_toolchains("@macos_sdk//:toolchain")

# vcpkg.install(package = "boost-asio")
# vcpkg.install(
#     cpus = "HOST_CPUS",
#     package = "openssl",
# )
# vcpkg.install(package = "fmt")
# vcpkg.install(
#     cpus = "HOST_CPUS",
#     package = "folly",
# )
# vcpkg.install(
#     cpus = "HOST_CPUS",
#     package = "duckdb",
# )
# vcpkg.install(
#     package = "qt",
#     cpus = "HOST_CPUS",
# )

# use_repo(
#     vcpkg,
#     "vcpkg",
#     "vcpkg_boost-asio",
#     "vcpkg_duckdb",
#     "vcpkg_fmt",
#     "vcpkg_folly",
#     "vcpkg_openssl",
#     "vcpkg_qt",
# )

# vcpkg.install(
#     package = "qt",
#     cpus = "HOST_CPUS",
# )
# use_repo(
#     vcpkg,
#     "vcpkg",
#     "vcpkg_qt",
# )

vcpkg.install(
    cpus = "HOST_CPUS",
    package = "qtbase",
)
use_repo(
    vcpkg,
    "vcpkg",
    "vcpkg_qtbase",
)

register_toolchains("@vcpkg//:vcpkg_toolchain")
