load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_import")
load(":copy_qt_plugins.bzl", "copy_qt_plugins")

copy_qt_plugins(name = "qt_plugins")

cc_import(
    name = "qt_plugins_import",
    objects = [":qt_plugins"],
)

cc_binary(
    name = "hello_qt",
    srcs = ["hello_qt.cpp"],
    env = {
        "QT_DEBUG_PLUGINS": "1",
    },
    linkopts = select({
        "@platforms//os:macos": [
            "-lresolv",
            "-framework Cocoa",
            # "-framework AGL", # removed in latest MacOSX.sdk
            "-framework Carbon",
            "-framework OpenGL",
            "-framework ImageIO",
            "-framework CoreGraphics",
            "-framework CoreText",
            "-framework QuartzCore",
            "-framework Metal",
            "-framework CFNetwork",
            "-framework SystemConfiguration",
            "-framework IOKit",
            "-framework CoreFoundation",
            "-framework Foundation",
            "-framework DiskArbitration",
            "-framework ApplicationServices",
            "-framework CoreServices",
            "-framework UniformTypeIdentifiers",
            "-framework AudioToolbox",
            "-framework CoreMedia",
            "-framework CoreVideo",
            "-framework VideoToolbox",
            "-framework Security",
            "-framework AVFoundation",
            "-framework AppKit",
            "-framework IOSurface",
            "-framework CoreLocation",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":qt_plugins_import",
        "@vcpkg//qt",
    ],
)
