module(name = "vcpkg_hellos")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_vcpkg", version = "0.0.0")
local_path_override(
    module_name = "rules_vcpkg",
    path = "../..",
)

vcpkg = use_extension("@rules_vcpkg//vcpkg:extensions.bzl", "vcpkg")
vcpkg.bootstrap(
    release = "2025.06.13",
    sha256 = "ea2d0f029331ef0f58cb2d87c5e3f2c4606d927c63dc81d56d81a632f3dca45d",
    verbose = True,
)
vcpkg.install(package = "boost-asio")
vcpkg.install(package = "fmt")
vcpkg.install(package = "openssl")
vcpkg.configure(
    cpus = "HOST_CPUS",
    package = "openssl",
)
vcpkg.install(package = "folly")
vcpkg.configure(
    cpus = "HOST_CPUS",
    package = "folly",
)
vcpkg.install(package = "duckdb")
vcpkg.configure(
    buildtree_fixups = [
        "rm -rf ${BUILDTREE_DIR}/src/*.clean/data/csv/glob/crawl/.symbolic_link",
    ],
    cpus = "HOST_CPUS",
    package = "duckdb",
)
use_repo(
    vcpkg,
    "vcpkg",
    "vcpkg_bootstrap",
)

register_toolchains("@vcpkg_bootstrap//:vcpkg_toolchain")
