module(name = "vcpkg_hellos")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_vcpkg", version = "0.0.0")
local_path_override(
    module_name = "rules_vcpkg",
    path = "../..",
)

vcpkg = use_extension("@rules_vcpkg//vcpkg:extensions.bzl", "vcpkg")
vcpkg.bootstrap(
    release = "2025.07.25",
    sha256 = "dff617c636a6519d4f083e658d404970c9da7d940a974e1d17f855f26a334e2f",
    # verbose = True,
)
vcpkg.install(package = "boost-asio")
vcpkg.install(package = "fmt")
vcpkg.install(package = "openssl")
vcpkg.configure(
    cpus = "HOST_CPUS/2",
    package = "openssl",
)
vcpkg.install(package = "folly")
vcpkg.configure(
    cpus = "HOST_CPUS/2",
    os = "macos",
    package = "folly",
    src_patches = [
        "//hello_folly:folly_src.patch",
    ],
)
vcpkg.install(package = "duckdb")
vcpkg.configure(
    buildtree_fixups = [
        "rm -rf ${BUILDTREE_DIR}/src/*.clean/data/csv/glob/crawl/.symbolic_link",
    ],
    cpus = "HOST_CPUS/2",
    package = "duckdb",
)
use_repo(
    vcpkg,
    "vcpkg",
    "vcpkg_bootstrap",
)

register_toolchains("@vcpkg_bootstrap//:vcpkg_toolchain")
