module(name = "vcpkg_hellos")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_vcpkg", version = "0.0.0")
local_path_override(
    module_name = "rules_vcpkg",
    path = "../..",
)

vcpkg = use_extension("@rules_vcpkg//vcpkg:extensions.bzl", "vcpkg")
vcpkg.bootstrap(
    release = "2025.07.25",
    sha256 = "dff617c636a6519d4f083e658d404970c9da7d940a974e1d17f855f26a334e2f",
)
vcpkg.install(package = "fmt")
vcpkg.install(package = "folly")
vcpkg.configure(
    cpus = "HOST_CPUS/2",
    package = "openssl",
)
vcpkg.configure(
    cpus = "HOST_CPUS",
    package = "folly",
)
vcpkg.configure(
    os = "macos",
    package = "folly",
    src_patches = [
        "//hello_folly:folly_src.patch",
    ],
)
use_repo(
    vcpkg,
    "vcpkg",
    "vcpkg_bootstrap",
)

register_toolchains("@vcpkg_bootstrap//:vcpkg_toolchain")

bazel_dep(name = "toolchains_llvm", version = "1.4.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {"": "c++23"},
    llvm_version = "19.1.6",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
