load("//vcpkg/toolchain:current_toolchain.bzl", "current_toolchain")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "external_toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "current_toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "arm64_macos",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:osx",
    ],
)

config_setting(
    name = "amd64_macos",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:osx",
    ],
)

config_setting(
    name = "arm64_linux",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "amd64_linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

current_toolchain(
    name = "current",
    arch_long = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "x86_64",
    }),
    arch_short = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "x64",
    }),
    system_name = select({
        "@platforms//os:osx": "Darwin",
        "@platforms//os:linux": "Linux",
    }),
    toolchain_template = "//vcpkg/toolchain/triplets:toolchain.tmpl.cmake",
    triplet = select({
        ":arm64_macos": "arm64-osx",
        ":amd64_macos": "x64-osx",
        ":arm64_linux": "arm64-linux",
        ":amd64_linux": "x64-linux",
    }),
    triplet_template = select({
        "@platforms//os:osx": "//vcpkg/toolchain/triplets:macos.tmpl.cmake",
        "@platforms//os:linux": "//vcpkg/toolchain/triplets:linux.tmpl.cmake",
    }),
)

toolchain(
    name = "current_toolchain",
    toolchain = ":current",
    toolchain_type = ":current_toolchain_type",
    visibility = ["//visibility:public"],
)
