load("//vcpkg/toolchain:current_toolchain.bzl", "current_toolchain")
load("//vcpkg/vcpkg_utils:platform_utils.bzl", "definitions")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "current_toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "arm64_macos",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:osx",
    ],
)

config_setting(
    name = "amd64_macos",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:osx",
    ],
)

config_setting(
    name = "arm64_linux",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "amd64_linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

current_toolchain(
    name = "current",
    substitutions = select({
        ":arm64_macos": definitions.macos.arm64.substitutions,
        ":amd64_macos": definitions.macos.amd64.substitutions,
        ":arm64_linux": definitions.linux.arm64.substitutions,
        ":amd64_linux": definitions.linux.amd64.substitutions,
    }),
    toolchain_template = "//vcpkg/toolchain/triplets:toolchain.tmpl.cmake",
    triplet = select({
        ":arm64_macos": definitions.macos.arm64.triplet,
        ":amd64_macos": definitions.macos.amd64.triplet,
        ":arm64_linux": definitions.linux.arm64.triplet,
        ":amd64_linux": definitions.linux.amd64.triplet,
    }),
    triplet_template = select({
        "@platforms//os:osx": "//vcpkg/toolchain/triplets:macos.tmpl.cmake",
        "@platforms//os:linux": "//vcpkg/toolchain/triplets:linux.tmpl.cmake",
    }),
)

toolchain(
    name = "current_toolchain",
    toolchain = ":current",
    toolchain_type = ":current_toolchain_type",
    visibility = ["//visibility:public"],
)
