load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

_COMMON_COPTS = [
    "-std=c++17",
    "-mmacosx-version-min=14.0",
]

config_setting(
    name = "is_release_build",
    values = {
        "compilation_mode": "opt",
    },
    visibility = ["//visibility:public"],
)

filegroup(
    name = "call_vcpkg_wrapper_tpl",
    srcs = ["call_vcpkg_wrapper.sh.tpl"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "package_ctrl",
    srcs = ["package_ctrl.cpp"],
    hdrs = ["package_ctrl.hpp"],
    copts = _COMMON_COPTS,
)

cc_library(
    name = "copy_sources",
    srcs = ["copy_sources.cpp"],
    hdrs = ["copy_sources.hpp"],
    copts = _COMMON_COPTS,
)

cc_binary(
    name = "prepare_install_dir",
    srcs = ["prepare_install_dir.cpp"],
    copts = _COMMON_COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":copy_sources",
        ":package_ctrl",
    ],
)

cc_binary(
    name = "extract_package_outputs",
    srcs = ["extract_package_outputs.cpp"],
    copts = _COMMON_COPTS,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "validate_package_output",
    srcs = ["validate_package_output.cpp"],
    copts = _COMMON_COPTS,
    visibility = ["//visibility:public"],
)
